# fde-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: synth_yosys_fde.py
src/: lib.rs
src/app/cli/: commands.rs  helpers.rs
src/app/orchestrator/: mod.rs  modern.rs  report.rs
src/app/report/: mod.rs
src/core/domain/: block_ram.rs  cell.rs  cluster.rs  mod.rs  pin.rs  primitive.rs  routing.rs  sequential.rs  site.rs
src/core/ir/: cell.rs  mod.rs  slice_assignment.rs
src/infra/edif/: builder.rs  contents.rs  mod.rs  tests.rs
src/infra/io/: mod.rs
src/infra/io/xml/: helpers.rs  lut_expr.rs  mapped_xml.rs  physical.rs  physical_import.rs  reader.rs  writer.rs
src/infra/resource/: arch.rs  routing.rs
src/infra/resource/routing/: components.rs  site_graph.rs  tests.rs
src/stages/bitgen/: api.rs  literal.rs  mod.rs
src/stages/bitgen/device/: tests.rs  types.rs
src/stages/bitgen/frame_bitstream/: encode.rs  tests.rs
src/stages/bitgen/programming/: derive.rs  emit.rs  tests.rs  types.rs
src/stages/import/: mod.rs
src/stages/map/: api.rs  input.rs  mod.rs  rewrite.rs  tests.rs
src/stages/map/rewrite/: block_ram.rs
src/stages/pack/: api.rs  mod.rs  tests.rs
src/stages/place/: cost.rs  mod.rs  solver.rs  support.rs  tests.rs
src/stages/route/: api.rs  cost.rs  heap.rs  lookup.rs  mod.rs  occupancy.rs  policy.rs  router.rs  tests.rs  wire.rs
src/stages/route/lowering/: cells.rs  nets.rs
src/stages/route/mapping/: bram.rs  mod.rs
src/stages/route/router/: tests.rs
src/stages/sta/: api.rs  mod.rs
(+18 files in other folders)
