[package]
name = "fde"
version = "0.1.0"
edition = "2024"
authors = ["0xtaruhi"]
description = "Standalone Rust implementation flow for FDE"
license = "MIT"
repository = "https://github.com/0xtaruhi/fde-rs"
homepage = "https://github.com/0xtaruhi/fde-rs"
readme = "README.md"
default-run = "fde"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.11"
roxmltree = "0.21"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
smallvec = "1.15"
thiserror = "2.0"
rustc-hash = "2.1"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
